# docker-uv-nvidia-template

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.template.yml  docker-compose.yml  pyproject.toml
src/: example.ipynb  example.py
